src/component/courseDescription/Description.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Ubuntu&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');

.coursedescription {
    margin-top: 11vh;
}
/* change hero background */
.hero {
    width: 100%;
    height: 30%;
    color: white;
}

.overlay {
    background-color: rgba(70, 157, 147);
    background-size: cover;
    padding-top: 40px;
    padding-left: 25px;
    padding-right: 25px;
}

.courseCode {
    position: static;
    border: 1px;
    font-family: 'Ubuntu', sans-serif;
    font-size: 25px;
    margin-bottom: 1px;
    text-align: left;
}

.courseName {
    font-family: 'Fira Sans', sans-serif;
    font-size: 17px;
    text-align: left;
    border: 1px;
    margin-bottom: 10px;
}

.courseDesc {
    font-family: 'Fira Sans', sans-serif;
    font-size: 16px;
    text-align: left;
}

.button {
    border: none;
    text-decoration: none;
    display: inline-block;
    margin: 1px 5px;
    border-radius: 12px;
}

.creditInfo {
    background-color: rgb(236, 236, 236);
    float: left;
    color: rgb(149, 149, 149);
    padding: 13px;
    font-size: 13px;
    text-align: left;
}

.credit {
    background-color: rgb(151, 124, 214);
    float: left;
    color: white;
    padding: 5px;
    font-size: 13px;
    text-align: center;
}

.type {
    background-color: rgb(154, 179, 219);
    float: left;
    color: white;
    padding: 5px;
    font-size: 13px;
    text-align: center;
}

.myPlan {
    color: rgb(223, 222, 222);
    font-size: 16px;
    font-family: 'Fira Sans', sans-serif;
    text-align: left;
    border: 1px;
    margin-bottom: 10px;
    text-decoration: none;
}

.courseCredit {
    color: rgba(0, 0, 0, 0.18);
    font-size: 150px;
    font-family: 'Roboto', sans-serif;
    text-align: left;
    line-height: 90px;
}

/* Media Control screen larger than 320px */ 
@media (min-width: 320px)
{

}

/* Media Control screen larger than 480px */ 
@media (min-width: 768px) 
{
    .hero {
        background-repeat: no-repeat;
        background-size: cover;
        padding-top: 10px;
        padding-left: 10%;
        padding-right: 35%;
        padding-bottom: 10px;
    }

    .overlay {
        background-color: rgba(70, 157, 147, 0.97);
        padding-top: 45px;
        padding-right: 10px;
        border-radius: 25px 25px 25px 25px;
    }

}

/* Media Control screen larger than 768px */ 
@media (min-width: 1024px)
{
    .hero {
        background-repeat: no-repeat;
        background-size: cover;
        padding-left: 25%;
        padding-right: 25%;
    }

}

